observability_prometheus/_installProAmPg/1_prometheus/prometheus-official/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Need view with credentials
    nginx.ingress.kubernetes.io/auth-secret: ing-prometheus-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: ingress-with-auth-for-prometheus
  namespace: prometheus
spec:
  rules:
  - host: prometheus.milkcargo.cn
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.milkcargo.cn
    secretName: secret-cert-prometheus
